--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,20 +3,24 @@
 
 <head>
 	<title>Mongo Scraper</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-
+	<h1>Mongo Scraper</h1>
+	<h3>This Express app will scrape news articles from the tech
+		news site Arstechnica and allow anyone to make comments on each one</h3>
+	<button class="btn btn-primary btn-lg" id="scrape">Scrape Articles</button>
 	<div id="wrapper">
-		<h1>Note Scraper</h1>
-		<h2><i>If you can do this...the homework should be no problem.</i></h2>
-		<div id="articles"></div>
-		<div id="notes"></div>
+
+		<h2>Scraped articles:</h2>
+		{{{ body }}}
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
 	<script src="app.js"></script>
-	{{{ body }}}
+	
 </body>
 
 </html>
