--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-	<div class="jumbotron">
+	<div class="jumbotron jumbotron-fluid">
 		<h1 class="display-4">Mongo Scraper</h1>
+		<br>
 		<p class="lead">This Express app scrapes news articles from the tech
 			news site Arstechnica and allows anyone to make comments on each one</p>
 	</div>
